--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <!-------Testimonial------>
 
     <section class="testimonials">
-        <h1>What our customers says</h1>
+        <h1>What our customers say</h1>
         <p>Customer opinions matter.</p>
 
         <div class="row">
